# fprime-zephyr-bkup

./: .gitignore  .gitmodules  Dockerfile  README.md  run_dev.py  west.yml
fprime/: .gitignore  CMakeLists.txt  README.md  project.cmake
fprime/Components/HelloWorld/: HelloWorld.cpp  HelloWorld.fpp  HelloWorld.hpp
fprime/Components/HelloWorld/docs/: sdd.md
fprime/Components/ZephyrTime/: CMakeLists.txt  ZephyrTime.cpp  ZephyrTime.fpp  ZephyrTime.hpp
fprime/Components/ZephyrTimer/: CMakeLists.txt  ZephyrTimer.cpp  ZephyrTimer.fpp  ZephyrTimer.hpp
fprime/Components/ZephyrUartDriver/: CMakeLists.txt  ZephyrUartDriver.cpp  ZephyrUartDriver.hpp
fprime/MyDeployment/: CMakeLists.txt  Kconfig  Main.cpp  prj.conf  settings.ini
fprime/MyDeployment/Top/: CMakeLists.txt  MyDeploymentPackets.xml  MyDeploymentTopology.cpp  MyDeploymentTopology.hpp  MyDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
fprime/MyDeployment/boards/: nucleo_h723zg.overlay
fprime/benchmarks/: analyze_elf.py  build_all.py
fprime/benchmarks/1-zephyr/: main.c
fprime/benchmarks/1.1-zephyr-fpu/: main.c
fprime/benchmarks/1.2-zephyr-drivers/: CMakeLists.txt  main.c  prj.conf
fprime/benchmarks/2-zephyr-cpp/: main.cpp  prj.conf
fprime/benchmarks/3-zephyr-only-drivers/: CMakeLists.txt  prj.conf
fprime/fprime-zephyr/: CMakeLists.txt
fprime/fprime-zephyr/Os/: CMakeLists.txt  IntervalTimer.cpp  Mutex.cpp  Queue.cpp  Task.cpp
fprime/fprime-zephyr/cmake/platform/: Zephyr.cmake
fprime/fprime-zephyr/cmake/platform/types/: PlatformTypes.h
